# extract_ligands

./: .gitignore  LICENSE  README.md  pyproject.toml
src/extract_ligands/: extrac_ligands.py
tests/: test_extract_ligands.py  test_extract_logands.py
